tests/fail/elaboration/unification/mismatch/record-type-singleton.snap
stdout = ''
stderr = '''
error: type mismatch
  ┌─ tests/fail/elaboration/unification/mismatch/record-type-singleton.fathom:6:11
  │
6 │ { thing : unit }
  │           ^^^^

'''
